CRUD lessons from DB & editor go back

--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,15 @@ thead{
   line-height: unset;
 }
 
+.list-group-item.active a{
+  color: white;
+}
+
+.nav-item.active{
+  background-color: #4891e4;
+}
+
+.nav-item.active a{
+  color: white;
+}
+
