--- a/src/component/course-editor/course-editor.css
+++ b/src/component/course-editor/course-editor.css
@@ -63,6 +63,10 @@ html,body{
     padding: 0;
 }
 
+.wm-editor{
+    margin-left: 10px;
+}
+
 /*.nav-link.active{*/
 /*    background-color: #393c3e;*/
 /*    color: #f3f3f3;*/
